Create Project's Main Java Files

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <version>4.2</version>
         </dependency>
         <dependency>
+            <groupId>com.jhlabs</groupId>
+            <artifactId>filters</artifactId>
+            <version>2.0.235</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
